# janggi_project

./: .gitignore  AI_COLLAB.md  BUGFIX_LOG.md  BUGFIX_SESSION_2.md  ENCODING_TEST.md  FEATURES.md  OPTIMIZATION_LOG.md  ORCHESTRATION_ADVANCED.md  ORCHESTRATION_ASYNC.md  ORCHESTRATION_LOG.md  PARALLEL_STRESS_1.md  PARALLEL_STRESS_2.md  PARALLEL_STRESS_3.md  PARALLEL_TEST_A.md  PARALLEL_TEST_B.md  PARALLEL_TEST_PLAN.md  PROJECT_CONTEXT.md  README.md  SKIP_TEST.md  STABILITY_TEST.md  STABILITY_TEST_2.md  STABILITY_TEST_3.md  TESTING.md  WORKLOG_2026-02-19.md  setup.bat  tmpclaude-f911-cwd
janggi_master/: .gitattributes  .gitignore  README.md  analysis_options.yaml  my_puzzle  pubspec.yaml  puzzle_validation_extractor.state.r2.json  puzzle_validation_extractor_rest_00.json  puzzle_validation_extractor_rest_00_r2.json  puzzle_validation_extractor_rest_01.json  puzzle_validation_extractor_rest_02.json  puzzle_validation_extractor_rest_05_r2.json  puzzle_validation_extractor_subset_00.json  puzzle_validation_sample1.json  puzzles_0_5.json  puzzles_all_gib_test.json  puzzles_mate1.json  puzzles_mate2.json  puzzles_subset_00.json  puzzles_subset_01.json  puzzles_subset_03.json  puzzles_subset_rest_02.json  puzzles_subset_rest_04.json  puzzles_subset_rest_05.json  puzzles_test.json  puzzles_timeout_sample20.json  puzzles_tmp_one.json  puzzles_tmp_one2.json  puzzles_tmp_one3.json  temp_puzzles_0_30.json  temp_puzzles_all_gib.json  test_coordinate_conversion.dart  test_list_legal_moves.dart  test_move_validation.dart  test_notation.dart  test_soldier.dart  test_uci_coords.dart  test_valid_moves.dart  test_variant.dart
janggi_master/android/: key.properties.example
janggi_master/android/app/: build.gradle
janggi_master/assets/puzzles/: puzzle_001.gib  puzzles.json  puzzles_quarantine.json  puzzles_relaxed.json  puzzles_relaxed_backup_345_20260218_132050.json  puzzles_strict.json
janggi_master/dev/: README.md
janggi_master/docs/: admob_release_setup.md  beta_recruitment_copy.md  community_supabase_setup.md  gib_corpus_pipeline.md  play_release_notes_1.2.0_13.md  play_store_feature_graphic_brief_2026-03-23.md  play_store_listing_ko_2026-04-29.md  promo_copy_2026-03-23.md  puzzle_automation_manual.md  puzzle_growth_strategy.md  store_video_storyboard_2026-03-23.md
janggi_master/engine/: CMakeLists.txt
janggi_master/engine/src/: bitboard.cpp  bitboard.h  build_dll.bat  c_api.cpp  evaluate.cpp  misc.cpp  position.cpp  position.h  test_dll.bat  test_dll.cpp  thread.cpp  thread.h  variant.cpp
janggi_master/engine/src/syzygy/: tbprobe.cpp
janggi_master/lib/: main.dart  stockfish_ffi.dart
janggi_master/linux/: CMakeLists.txt
janggi_master/test/: community_puzzle_model_test.dart  custom_puzzle_service_test.dart  engine_history_sync_regression_test.dart  extract_puzzle_candidates_test.dart  game_state_stability_test.dart  generated_puzzle_quality_guard_test.dart  generated_tail_puzzle_flow_test.dart  gib_corpus_support_test.dart  gib_parser_normalization_test.dart  janggi_board_coordinates_test.dart  kja_official_gib_replay_validation_test.dart  palace_diagonal_check_regression_test.dart  palace_diagonal_regression_test.dart  published_generated_mate_depth_test.dart  puzzle_catalog_curation_regression_test.dart  puzzle_catalog_full_line_validation_test.dart  puzzle_catalog_integrity_test.dart  puzzle_m2_01_solution_regression_test.dart  puzzle_m3_02_checkmate_regression_test.dart  puzzle_m3_22_alternative_branch_regression_test.dart  puzzle_m3_22_solution_regression_test.dart  puzzle_no_escape_regression_test.dart  puzzle_objective_test.dart  puzzle_progress_service_test.dart  puzzle_screen_flow_validation_test.dart  rule_mode_game_state_test.dart  rule_mode_settings_test.dart  shared_puzzle_import_service_test.dart  stockfish_bestmove_parsing_test.dart  widget_test.dart
janggi_master/tool/: build_community_seed_sql.dart  build_play_store_feature_graphic.py  build_portfolio_ppt.py  build_store_video_draft.py  curate_puzzle_catalog.dart  extract_puzzle_candidates.dart  filter_local_illegal_puzzles.dart  generate_module_wiki.dart  generate_selfplay_puzzles.dart  gib_corpus_support.dart  import_external_janggi_games.dart  import_gib_corpus.dart  material_gain_candidate_extractor.dart  material_gain_validator.dart  puzzle_local_legality_validator.dart  puzzle_quality_resumable_batch.dart  puzzle_quality_validator.dart  puzzle_solution_quality_validator.dart  rank_generated_puzzles.dart  split_puzzle_catalog.dart  upload_generated_puzzles.dart
janggi_master/tools/: generate_store_badges.py
janggi_master/web/: index.html  manifest.json
janggi_master/windows/: CMakeLists.txt
retry_test/: counter.txt
tool/: ai_debate.ps1  test_engine.dart
(+405 files in other folders)
